--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
+    "@mui/x-date-pickers": "^6.12.1",
     "apexcharts": "^3.42.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
