--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
